@@ -27,7 +27,8 @@ import org.apache.hama.Matrix;
 public class MatrixAddition extends AbstractExample {
   public static void main(String[] args) throws IOException {
     if (args.length < 2) {
-      System.out.println("add  [-m maps] [-r reduces] <row_m> <column_n>");
+      System.out
+          .println("add [-m maps] [-r reduces] <matrix A> <matrix B> [alpha]");
       System.exit(-1);
     } else {
       parseArgs(args);
@@ -35,11 +36,19 @@ public class MatrixAddition extends AbstractExample {
 
     String matrixA = ARGS.get(0);
     String matrixB = ARGS.get(1);
-    
+
     DenseMatrix a = new DenseMatrix(conf, matrixA, false);
     DenseMatrix b = new DenseMatrix(conf, matrixB, false);
 
-    Matrix c = a.add(b);
+    Matrix c;
+    if (ARGS.size() > 2) {
+      System.out.println("C = A + B");
+      c = a.add(b);
+    } else {
+      System.out.println("C = "+ Double.parseDouble(ARGS.get(2)) +" * B + A");
+      c = a.add(Double.parseDouble(ARGS.get(2)), b);
+    }
+    
     c.close();
   }
 }
