@@ -36,6 +36,7 @@ Trunk (unreleased changes)
     
   IMPROVEMENTS
 
+    HAMA-164: Example for C = Alpha*B + A (edwardyoon)
     HAMA-154: Combine multi-mapreduce jobs into a single mapreduce job 
                 while computing (samuel via edwardyoon)
     HAMA-152: Replace MapWritable to hadoop.io.MapWritable (edwardyoon)
